--- a/css/menu.css
+++ b/css/menu.css
@@ -3,7 +3,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(44, 43, 43);
 }
   
 li {
@@ -29,21 +29,21 @@ li.submenu {
 .links {
 display: none;
 position: absolute;
-background-color: #f9f9f9;
+background-color: #333;;
 min-width: 160px;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 z-index: 1;
 }
 
 .links a {
-color: black;
+color: white;
 padding: 12px 16px;
 text-decoration: none;
 display: block;
 text-align: left;
 }
 
-.links a:hover {background-color: #f1f1f1;}
+.links a:hover {background-color: red;}
 
 .submenu:hover .links {
 display: block;
