--- a/css/video.css
+++ b/css/video.css
@@ -1,1 +1,17 @@
 @import "menu.css";
+body{
+    background-color: #333;;
+    color: white;
+}
+body {
+    margin: 0px
+}
+.video-container {
+    width: 100vw;
+    height: 100vh;
+    background: #333;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center
+}
